Postgress schema and webpack corrections

--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "faker": "^5.1.0",
     "mongoose": "^5.11.11",
     "nodemon": "^1.19.3",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sequelize": "^6.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
