--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "webpack -w",
     "db:setup": "node database/seed.js",
     "start": "node server/index.js",
+    "dev": "nodemon server/index.js",
     "test": "jest --collectCoverage"
   },
   "dependencies": {
