--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "db:setup": "node database/seed.js",
     "start": "node server/index.js",
     "dev": "nodemon server/index.js",
-    "test": "jest --collectCoverage"
+    "test": "jest --collectCoverage",
+    "k6": "k6 run k6/test.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "compression": "^1.7.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "mongoose": "^5.11.11",
+    "newrelic": "^7.1.1",
     "nodemon": "^1.19.3",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
@@ -45,6 +48,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
+    "k6": "0.0.0",
     "react-test-renderer": "^17.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^4.41.0",
